# pyfii

./: .gitignore  BUGLIST.md  IIID.py  IIID2.py  PyFii0.0.1.py  README.md  __init__.py  curve.py  cv2show.py  cv3dshow.py  drone.py  example.py  fii.py  geometry.py  main.py  pyproject.toml  read.py  read_fii.py  read_img.py  read_xml.py  readme.md  show.py  test.xml  transfer.py  upload_pypi.sh
cv3d/: IIID.py  IIID2.py
doc/: doc_zh_CN.md
doc/tutorial/: group_flight.md  install.md  light.md  principle.md  script_mode.md
doc/tutorlal/: contents.md  group_flight.md  light.md  principle.md
examples/: add_lights.py  group_flight_4m_1.py  group_flight_4m_2.py  group_flight_6m_1.py  group_flight_6m_2.py  light_6m.py  script_mode_4m.py  script_mode_6m.py
src/pyfii/: __init__.py  drone.py  fii.py  function.py  read.py  show.py
src/pyfii.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pyfii/cv3d/: IIID.py  transfer.py
src/pyfii_Kevin0412/: fii.py  read.py
src/pyfii_Kevin0412.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: add_lights.py  class_closure_test.py  debug_test.py  dntg20220730_v3.py  dntg20220730_v3_bailan.py  drone_action_test.py  function.py  show_test.py  test.py  test_show_4m.py
tools/: fii_ip.py  fii_ip_py27.py  ip.csv  read_img.py  readme.md
